<resources>
    <string name="app_name">YAQA</string>
    <string name="nav_questions_title">Questions</string>
    <string name="nav_gamerules_title">Gamerules</string>
    <string name="nav_play_title">Play</string>
    <string name="nav_multiplayer_title">Multiplayer</string>
    <string name="nav_settings_title">Settings</string>
    <string name="questions_test_string">Questions test string</string>
    <string name="gamerules_test_string">Gamerules test string</string>
    <string name="play_test_string">Play test string</string>
    <string name="multiplayer_test_string">Multiplayer test string</string>
    <string name="settings_test_string">Setting test string</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_test">Button</string>
    <string name="title_test_string">Title</string>
    <string name="title_storage_permission">Write external storage needed</string>
    <string name="text_storage_permission">This app need write external permission. The app need this permission to
        continue running
    </string>
    <string name="ok">Accept</string>
    <string name="question_set_title_placeholder">Title</string>
    <string name="question_count_placeholder">10 question(s)</string>
    <string name="no_quesion_selected_text">No question selected. Selected by the sliding menu on the left</string>
    <string name="title_location_permission">Fine location permission needed</string>
    <string name="text_location_permission">Fine location permission needed for Wi-fi Direct Multiplayer</string>

</resources>
